# hdRestir

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Justfile  LICENSE  README.md  implicit_surface_scene_index_plugin.cpp  implicit_surface_scene_index_plugin.h  launch.bat  launch.sh  make.bat  make.sh  plugInfo.json.in  renderer_plugin.cpp  renderer_plugin.h  vcpkg.json  workflow.py
docs/: ARCHITECTURE.md
example_scenes/: many_lights_scene.usda  materialx_scene.usda  materialx_scene_mat.mtlx  mis_area_lights_scene.usda  scene.usda
exploratory_tests/image_comparison/: create_hdr_difference.py
exploratory_tests/restir/: ris_1d.py  ris_mis_two_techniques.py
exploratory_tests/spectral_reconstruction/: check_reconstruction_expectation.py  derive_basis_weights.py
images/reference/: internal_scene_reference.hdr  materialx_scene_reference.hdr  mis_area_lights_reference.hdr
performance_reference/scene/: PathTracer.json  RIS.json
settings/: RenderSetup.usda
source/core/: buffer_provider.h  buffer_user.h  clonable.h  debug.h  frame_buffer.cpp  frame_buffer.h  frame_buffer_map.cpp  frame_buffer_map.h  hit_record.h  metrics_on_buffers.cpp  metrics_on_buffers.h  not_null_unique_ptr.h  ray.h  ray_intersection.h  rng.h  shading_types.h  spectrum.cpp  spectrum.h
source/gpu_functions/: gpu_accumulation_kernel.cpp  gpu_accumulation_kernel.h
source/gpu_functions/shaders/: accumulation.slang
source/gpu_passes/: gpu_accumulation_pass.cpp  gpu_accumulation_pass.h
source/hydra/: hd_restir_instancer.cpp  hd_restir_instancer.h  hd_restir_light.cpp  hd_restir_light.h  hd_restir_material.cpp  hd_restir_material.h  hd_restir_mesh.cpp  hd_restir_mesh.h  hd_restir_render_buffer.cpp  hd_restir_render_buffer.h  hd_restir_render_delegate.cpp  hd_restir_render_delegate.h  hd_restir_render_job_adapter.h  hd_restir_render_param.h  hd_restir_render_pass.cpp  hd_restir_render_pass.h  hd_restir_render_settings_bprim.cpp  hd_restir_render_settings_bprim.h
source/integrators/: call_index.h  clonable.h  direct_light_integrator_factory.h  direct_light_integrator_interface.h  integrator.h  mis_direct_light_integrator.cpp  mis_direct_light_integrator.h  path_integrator.cpp  path_integrator.h
source/lighting_core/: light_sampler.h  uniform_light_sampler.cpp  uniform_light_sampler.h
source/materials/: default_material.cpp  default_material.h  ggx.cpp  ggx.h  material.h  preview_surface.cpp  preview_surface.h  preview_surface_params.h  shading_helpers.h
source/math/: pdf.h
source/passes/: accumulation_pass.cpp  accumulation_pass.h  debug_overlay_pass.cpp  debug_overlay_pass.h  denoiser.cpp  denoiser.h  denoiser_pass.cpp  denoiser_pass.h  fill_pass.cpp  fill_pass.h  integration_pass.cpp  integration_pass.h  output_names.h  path_trace_pass.cpp  path_trace_pass.h  post_process.cpp  post_process.h  post_process_pass.cpp  post_process_pass.h  raycast_pass.cpp  raycast_pass.h  render_pass.cpp  render_pass.h  upscale_pass.cpp  upscale_pass.h
source/passes/radiance_computation/: direct_lighting.cpp  direct_lighting.h
source/pipeline/: path_tracer_pipeline.h  render_pipeline.cpp  render_pipeline.h  renderer_pipeline_state.cpp  renderer_pipeline_state.h  split_screen.cpp  split_screen.h
source/renderContext/: bvh.cpp  bvh.h  camera_frame.h  render_context.h
source/renderer/: renderer.cpp  renderer.h  restir_aov_tokens.cpp  restir_aov_tokens.h  restir_render_settings.cpp  restir_render_settings.h
source/rendererInterface/: frame_buffer_target.h  render_job.h  texture_sampler.h
source/restir/: output_names.h  random_index.h  reservoir.h  ris_direct_light_integrator.cpp  ris_direct_light_integrator.h
source/restir_passes/: ris_path_trace_pass.h
source/restir_pipeline/: ris_pipeline.h
source/scene/: camera.h  camera_params.h  camera_ray.cpp  camera_ray.h  distant_light.cpp  distant_light.h  dome_light.cpp  dome_light.h  image_texture_sampler.cpp  image_texture_sampler.h  light_factory.cpp  light_factory.h  physical_sky.cpp  physical_sky.h  point_light.cpp  point_light.h  rect_light.cpp  rect_light.h  scene.cpp  scene.h
source/sceneInterface/: environment.h  instancer.h  light_interface.h  light_params.h  mesh.h  scene_interface.h
tests/: CMakeLists.txt  ensure_imagemagick.py  perf_report.py  perf_test.py  test_and_perf.py  test_camera.cpp  test_frame_buffer.cpp  test_hdr_capture_mse.py  test_mis_direct_light_integrator.cpp  test_renderer_aov_handoff.cpp  test_reservoir.cpp  test_rng.cpp  test_scene_material_lookup.cpp  test_split_screen.cpp
